Fixed Alignment problems

--- a/Static/Styles/styles.css
+++ b/Static/Styles/styles.css
@@ -102,8 +102,10 @@ body {
 
   #hotlineTitle h2 {
     font-size: 29.5px;
+    height: 50px;
     display: flex;
     justify-content: center;
+    align-items: center;
     font-weight: bold;
   }
   #hotlineName a{
